# CMakeProjectTemplate

./: CMakeLists.txt  Readme.md
include/: demo.h
src/: demo.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
